# cq

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  renovate.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.rs  git.rs  hook.rs  install.rs  main.rs  ui.rs
