[package]
name = "cq"
version = "0.1.3"
edition = "2021"
description = "A TUI git commit tool that runs pre-commit hooks in the background"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.43", features = ["full"] }
ratatui-textarea = "0.8"
anyhow = "1.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
